--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bookshelf",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://exercises-06-cache-management.bookshelf.lol/",
+  "homepage": "https://exercises-06-cache-management.bookshelf.lol/exercise/",
   "engines": {
     "node": "^10.13 || 12 || 14 || 15",
     "npm": ">=6"
